--- a/app/src/main/res/layout/rcv_recommend_items.xml
+++ b/app/src/main/res/layout/rcv_recommend_items.xml
@@ -22,7 +22,7 @@
             android:layout_height="300dp"
             android:contentDescription="@string/style_type"
             android:padding="15dp"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
             android:src="@drawable/ic_launcher_background"
             app:cardElevation="10dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
