--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".HomePageActivity">
+    tools:context=".presentation.HomePageActivity">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -23,6 +23,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 app:cardElevation="11dp"
+                app:cardBackgroundColor="@color/white"
                 android:layout_height="60dp">
                 <TextView
                     android:id="@+id/toolbar_title"
@@ -124,6 +125,6 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
