--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,9 +3,9 @@
 
     <item android:title="@string/home"
         android:icon="@drawable/baseline_home_24"
-        android:id="@+id/home"
+        android:id="@+id/homePageFragment"
         android:iconTint="#0E0C0C"/>
     <item android:title="@string/profile"
         android:icon="@drawable/baseline_person_24"
-        android:id="@+id/profile"/>
+        android:id="@+id/profile2"/>
 </menu>
