--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
-
+    app:startDestination="@id/homePageFragment">
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.frar.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/homePageFragment"
+        android:name="com.example.frar.presentation.HomePageFragment"
+        android:label="HomePageFragment" >
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_homePageFragment_to_profile2"
+            app:destination="@id/profile2" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.frar.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        android:id="@+id/profile2"
+        android:name="com.example.frar.presentation.Profile"
+        android:label="profile"
+        tools:layout="@layout/profile" />
 </navigation>
