--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">#9E9797</item>
 
     </style>
-    <style name="MyTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="MyTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <item name="android:colorPrimary">#9E9797</item>
         <item name="android:colorPrimaryDark">#9E9797</item>
