--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -38,6 +38,7 @@
             </androidx.cardview.widget.CardView>
 
             <ImageView
+                android:layout_marginTop="16dp"
                 android:id="@+id/img_display"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
@@ -45,7 +46,18 @@
                 android:layout_margin="5dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/uploadedImage"
-                android:scaleType="centerCrop"></ImageView>
+                android:scaleType="centerCrop"/>
+            <ImageView
+                android:id="@+id/img_guideline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:src="@drawable/guidelines_image"
+                android:padding="10dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/uploadedImage"
+                android:scaleType="centerCrop"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -102,9 +114,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
-
+                <!-- Round -->
                 <LinearLayout
                     android:paddingVertical="8dp"
                     android:layout_width="match_parent"
@@ -113,85 +125,103 @@
 
                     <TextView
                         android:id="@+id/roundTv"
-                        android:layout_width="70dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="3"
                         android:text="@string/round"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <com.google.android.material.progressindicator.LinearProgressIndicator
                         android:id="@+id/roundSl"
-                        android:layout_width="250dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="6"
+                        app:indicatorColor="@color/black"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center" />
 
                     <TextView
+                        android:paddingHorizontal="5dp"
                         android:id="@+id/roundPercentTv"
-                        android:layout_width="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2"
+                        android:gravity="center"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
                         android:text="@string/_100"
-                        android:textColor="?attr/colorPrimary" />
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
+                <!-- Square -->
                 <LinearLayout
                     android:paddingVertical="8dp"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/squareTv"
-                        android:layout_width="70dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="3"
                         android:text="@string/square"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <com.google.android.material.progressindicator.LinearProgressIndicator
                         android:id="@+id/squareSl"
-                        android:layout_width="250dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="6"
+                        app:indicatorColor="@color/black"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center" />
 
                     <TextView
                         android:id="@+id/squarePercentTv"
-                        android:layout_width="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2"
+                        android:gravity="center"
+                        android:paddingHorizontal="5dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:text="100"
-                        android:textColor="?attr/colorPrimary" />
+                        android:text="@string/_100"
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
+                <!-- Oval -->
                 <LinearLayout
                     android:paddingVertical="8dp"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/ovalTv"
-                        android:layout_width="70dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="3"
                         android:text="Oval"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <com.google.android.material.progressindicator.LinearProgressIndicator
                         android:id="@+id/ovalSl"
-                        android:layout_width="250dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="6"
+                        app:indicatorColor="@color/black"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center" />
 
                     <TextView
                         android:id="@+id/ovalPercentTv"
-                        android:layout_width="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2"
+                        android:gravity="center"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:text="100"
-                        android:textColor="?attr/colorPrimary" />
+                        android:paddingHorizontal="5dp"
+                        android:text="@string/_100"
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
+                <!-- Oblong -->
                 <LinearLayout
                     android:paddingVertical="8dp"
                     android:layout_width="match_parent"
@@ -200,63 +230,74 @@
 
                     <TextView
                         android:id="@+id/oblongTv"
-                        android:layout_width="70dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="3"
                         android:text="Oblong"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <com.google.android.material.progressindicator.LinearProgressIndicator
                         android:id="@+id/oblongSl"
-                        android:layout_width="250dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="6"
+                        app:indicatorColor="@color/black"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center" />
 
                     <TextView
                         android:id="@+id/oblongPercentTv"
-                        android:layout_width="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2"
+                        android:gravity="center"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:text="100"
-                        android:textColor="?attr/colorPrimary" />
+                        android:paddingHorizontal="5dp"
+                        android:text="@string/_100"
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
+                <!-- Heart -->
                 <LinearLayout
                     android:paddingVertical="8dp"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/heartTv"
-                        android:layout_width="70dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="3"
                         android:text="Heart"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <com.google.android.material.progressindicator.LinearProgressIndicator
                         android:id="@+id/heartSl"
-                        android:layout_width="250dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="6"
+                        app:indicatorColor="@color/black"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center" />
 
                     <TextView
                         android:id="@+id/heartPercentTv"
-                        android:layout_width="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2"
+                        android:gravity="center"
+                        android:paddingHorizontal="5dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:text="100"
-                        android:textColor="?attr/colorPrimary" />
+                        android:text="@string/_100"
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
+                <!-- Result -->
                 <LinearLayout
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
-                        android:textStyle="bold"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:text="@string/result"
@@ -269,11 +310,37 @@
                         android:textColor="?attr/colorPrimary"
                         android:textSize="18sp"
                         tools:text="Round"
-
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
 
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/btnLayout"
+                android:visibility="gone"
+                android:padding="6dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/maleBtn"
+                    android:text="@string/male"
+                    android:layout_weight="5"
+                    android:backgroundTint="@color/black"
+                    android:layout_width="0dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_height="wrap_content"/>
+                <Button
+                    android:id="@+id/femaleBtn"
+                    android:text="@string/female"
+                    android:layout_weight="5"
+                    android:layout_marginHorizontal="5dp"
+                    android:backgroundTint="@color/white"
+                    android:textColor="@color/black"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
             <TextView
@@ -286,7 +353,7 @@
                 android:textColor="@color/black"
                 android:textSize="28sp"
                 android:textStyle="bold"
-                android:visibility="visible">
+                android:visibility="gone">
 
             </TextView>
 
@@ -297,7 +364,7 @@
                 android:layout_marginTop="10dp"
                 android:fillViewport="true"
                 android:orientation="vertical"
-                android:visibility="visible"
+                android:visibility="gone"
                 tools:itemCount="10"
                 tools:listitem="@layout/rcv_recommend_items">
 
